6739267: D3D/OGL: add missing ThreeByteBgr to texture upload blit loop

Reviewed-by: campbell, flar